github_data_collector/src/data/issue_comment/Tencent_Hippy.txt
Before submitting a new pull request, please make sure:

- [ ] Test cases have been added/updated for the code you will submit.
- [ ] Documentation has added or updated.
- [X] Commit message is following the [Convention Commit](https://conventionalcommits.org/) guideline.
- [X] Squash the repeat code commits, short patches are welcome.

**Describe the bug**
当加载更多时，图片会整体闪烁；

Before submitting a new pull request, please make sure:

- [ ] Test cases have been added/updated for the code you will submit.
- [ ] Documentation has added or updated.
- [x] Commit message is following the [Convention Commit](https://conventionalcommits.org/) guideline.
- [x] Squash the repeat code commits, short patches are welcome.

Fixes #116 
**Describe the bug**
Get empty page and warning when opening ul/li case in web mode(hippy-vue-demo).

**To Reproduce**
Steps to reproduce the behavior:
1. Go to the root directory of 'examples/hippy-vue-demo'
2. Run command 'npm run serve'
3. open 'http://localhost:8080/#/' in browser and click 'ul/li 组件'
4. See error

**Expected behavior**
Show the demo list and no warning in console.

**Screenshots**
![企业微信截图_8f0dab5f-553b-4ed4-84f1-85b09557eaa7](https://user-images.githubusercontent.com/6027456/72202088-6b68f200-3496-11ea-8954-5002f7b66b8f.png)
slient => silent

Before submitting a new pull request, please make sure:

- [ ] Test cases have been added/updated for the code you will submit.
- [ ] Documentation has added or updated.
- [ ] Commit message is following the [Convention Commit](https://conventionalcommits.org/) guideline.
- [ ] Squash the repeat code commits, short patches are welcome.

npm run hippy:debug

> hippy-react-demo@2.0.0 hippy:debug ***/Hippy/examples/hippy-react-demo
> hippy-debug

ℹ  Hippy debug server is started, you can open "chrome://inspect" in Chrome to debug your Hippy app now.
⚠  Port reverse failed, please execute command manually if you need android debugging: adb reverse --remove-all && adb reverse tcp:38989 tcp:38989
✖  Error: spawn adb ENOENT 
    at Process.ChildProcess._handle.onexit (internal/child_process.js:232:19)
    at onErrorNT (internal/child_process.js:407:16)
    at process._tickCallback (internal/process/next_tick.js:63:19)
mac OS ,excute   npm run build in iterm2, get error with info :

```
hippy@ build /Users/Carl/workspace/private/Hippy
> node ./scripts/js2cpp/build.js && node ./scripts/build.js

/Users/Carl/workspace/private/Hippy/scripts/js2cpp/build.js:54
let wraperFront_buffer = fs.readFileSync(`${__dirname}/wraperFront.js`);
^^^
SyntaxError: Block-scoped declarations (let, const, function, class) not yet supported outside strict mode
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:413:25)
    at Object.Module._extensions..js (module.js:452:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Function.Module.runMain (module.js:475:10)
    at startup (node.js:118:18)
    at node.js:952:3

npm ERR! Darwin 18.7.0
npm ERR! argv "/Users/Carl/.nvm/versions/node/v4.1.2/bin/node" "/Users/Carl/.nvm/versions/node/v4.1.2/bin/npm" "run" "build"
npm ERR! node v4.1.2
npm ERR! npm  v2.14.4
npm ERR! code ELIFECYCLE
npm ERR! hippy@ build: `node ./scripts/js2cpp/build.js && node ./scripts/build.js`
npm ERR! Exit status 1
npm ERR!
npm ERR! Failed at the hippy@ build script 'node ./scripts/js2cpp/build.js && node ./scripts/build.js'.
npm ERR! This is most likely a problem with the hippy package,
npm ERR! not with npm itself.
npm ERR! Tell the author that this fails on your system:
npm ERR!     node ./scripts/js2cpp/build.js && node ./scripts/build.js
npm ERR! You can get their info via:
npm ERR!     npm owner ls hippy
```



想跑一下demo但是跑起来就报错, 以前没用过android studio
**Is your feature request related to a problem? Please describe.**
A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]

**Describe the solution you'd like**
A clear and concise description of what you want to happen.

**Describe alternatives you've considered**
A clear and concise description of any alternative solutions or features you've considered.

**Additional context**
Add any other context or screenshots about the feature request here.

